Added BASE_URL functionality

--- a/new-note.html
+++ b/new-note.html
@@ -41,7 +41,8 @@
       return;
     }
 
-    fetch("http://localhost:8080/note/create", {
+    const BASE_URL = "https://46b37d70cc70.ngrok-free.app";
+    fetch(`${BASE_URL}/note/create`, {
       method: "POST",
       headers: {"Content-Type": "application/json",
                 "Authorization": `Bearer ${userToken}`},
