--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,8 @@
 <script>
   const userToken = localStorage.getItem("userToken");
 
-  fetch("http://localhost:8080/user/get-user", {
+  const BASE_URL = "https://46b37d70cc70.ngrok-free.app";
+  fetch(`${BASE_URL}/user/get-user`, {
     method: "GET",
     headers: {"Content-Type": "application/json",
               "Authorization": `Bearer ${userToken}`},
