--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,8 @@
     window.location.href = "signin.html"; // Not signed in
   }
 
-  fetch("http://localhost:8080/user/get-user", {
+  const BASE_URL = "https://46b37d70cc70.ngrok-free.app";
+  fetch(`${BASE_URL}/user/get-user`, {
     method: "GET",
     headers: {"Content-Type": "application/json",
       "Authorization": `Bearer ${userToken}`},
@@ -72,7 +73,8 @@
     const newPassword = document.getElementById("newPassword").value;
     const userId = localStorage.getItem("userId");
 
-    fetch("http://localhost:8080/user/update-password", {
+    const BASE_URL = "https://46b37d70cc70.ngrok-free.app";
+    fetch(`${BASE_URL}/user/update-password`, {
       method: "PATCH",
       headers: {"Content-Type": "application/json",
         "Authorization": `Bearer ${userToken}`},
