--- a/signin.html
+++ b/signin.html
@@ -30,7 +30,8 @@
     const email = document.getElementById("email").value;
     const password = document.getElementById("password").value;
 
-    fetch("http://localhost:8080/user/signin", {
+    const BASE_URL = "https://46b37d70cc70.ngrok-free.app";
+    fetch(`${BASE_URL}/user/signin`, {
       method: "POST",
       headers: {"Content-Type": "application/json"},
       body: JSON.stringify({
