--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,8 @@
     const email = document.getElementById("email").value;
     const password = document.getElementById("password").value;
 
-    fetch("http://localhost:8080/user/create", {
+    const BASE_URL = "https://46b37d70cc70.ngrok-free.app";
+    fetch(`${BASE_URL}/user/create`, {
       method: "POST",
       headers: {"Content-Type": "application/json"},
       body: JSON.stringify({
