--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
     alert("User not signed in!");
     window.location.href = "signin.html"; // Not signed in
   } else {
-    const BASE_URL = "https://3f1ecb0a03d8.ngrok-free.app";
+    const BASE_URL = " https://533053e8a635.ngrok-free.app";
 
     fetch(`${BASE_URL}/user/get-user`, {
       method: "GET",
@@ -34,18 +34,25 @@
         "Authorization": `Bearer ${userToken}`
       }
     })
-            .then(res => res.json())
-            .then(data => {
-              console.log("User data:", data);
-              if (data.userAPIResponseCode !== "200") {
-                throw new Error(data.userAPIResponseData || "Failed to get user.");
+            .then(async res => {
+              if (!res.ok) {
+                const text = await res.text(); // Get the raw response
+                console.error("Error response:", text);
+                throw new Error(`HTTP error! status: ${res.status}`);
               }
-              // console.log("User data:", data);
-              const user = data.userAPIResponseData;
-              const userName = user.userName;
-              document.getElementById("welcome").textContent = `Welcome, ${userName}`;
+              return res.json();
             })
-            .catch(err => alert(err.message));
+    .then(data => {
+      console.log("User data:", data);
+      if (data.userAPIResponseCode !== "200") {
+        throw new Error(data.userAPIResponseData || "Failed to get user.");
+      }
+      // console.log("User data:", data);
+      const user = data.userAPIResponseData;
+      const userName = user.userName;
+      document.getElementById("welcome").textContent = `Welcome, ${userName}`;
+    })
+    .catch(err => alert(err.message));
   }
 
   document.getElementById("logout").addEventListener("click", function (e) {
