--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
     alert("User not signed in!");
     window.location.href = "signin.html"; // Not signed in
   } else {
-    const BASE_URL = " https://533053e8a635.ngrok-free.app";
+    const BASE_URL = "https://4f6518a6f47f.ngrok-free.app";
 
     fetch(`${BASE_URL}/user/get-user`, {
       method: "GET",
@@ -35,12 +35,21 @@
       }
     })
             .then(async res => {
-              if (!res.ok) {
-                const text = await res.text(); // Get the raw response
-                console.error("Error response:", text);
-                throw new Error(`HTTP error! status: ${res.status}`);
+              const text = await res.text(); // raw body
+              console.log("Raw response:", text); // 🐞 debug!
+
+              let data;
+              try {
+                data = JSON.parse(text);
+              } catch (err) {
+                throw new Error("Server returned non-JSON response. Possibly an HTML error page.");
               }
-              return res.json();
+
+              if (!res.ok) {
+                throw new Error(data.userAPIResponseData || "Login failed");
+              }
+
+              return data;
             })
     .then(data => {
       console.log("User data:", data);
