--- a/dashboard.html
+++ b/dashboard.html
@@ -31,7 +31,8 @@
       method: "GET",
       headers: {
         "Content-Type": "application/json",
-        "Authorization": `Bearer ${userToken}`
+        "Authorization": `Bearer ${userToken}`,
+        'ngrok-skip-browser-warning': 'true'
       }
     })
             .then(async res => {
