--- a/new-note.html
+++ b/new-note.html
@@ -45,7 +45,8 @@
     fetch(`${BASE_URL}/note/create`, {
       method: "POST",
       headers: {"Content-Type": "application/json",
-                "Authorization": `Bearer ${userToken}`},
+                "Authorization": `Bearer ${userToken}`,
+        'ngrok-skip-browser-warning': 'true'},
       body: JSON.stringify({
         noteTitle: title,
         noteContent: content
