--- a/note.html
+++ b/note.html
@@ -49,7 +49,8 @@
         fetch(`${BASE_URL}/note/get-note-by-id/${noteId}`, {
             method: "GET",
             headers: {"Content-Type": "application/json",
-                "Authorization": `Bearer ${userToken}`}
+                "Authorization": `Bearer ${userToken}`,
+                'ngrok-skip-browser-warning': 'true'}
         })
         .then(res => res.json())
         .then(data => {
@@ -81,7 +82,8 @@
         fetch(`${BASE_URL}/note/update`, {
             method: "PATCH",
             headers: {"Content-Type": "application/json",
-                "Authorization": `Bearer ${userToken}`},
+                "Authorization": `Bearer ${userToken}`,
+                'ngrok-skip-browser-warning': 'true'},
             body: JSON.stringify({
                 noteId: noteId,
                 noteTitle: title,
