--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,8 @@
     const BASE_URL = " https://4f6518a6f47f.ngrok-free.app";
     fetch(`${BASE_URL}/user/create`, {
       method: "POST",
-      headers: {"Content-Type": "application/json"},
+      headers: {"Content-Type": "application/json",
+        'ngrok-skip-browser-warning': 'true'},
       body: JSON.stringify({
         userName: name,
         userEmail: email,
