--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="signin.html">Sign In</a>
 </div>
 
-<footer><a id="logout" href="#">Log out</a> </footer>
+<!--<footer><a id="logout" href="#">Log out</a> </footer>-->
 
 <script>
     document.getElementById("logout").addEventListener("click", function (e) {
