--- a/notes.html
+++ b/notes.html
@@ -152,8 +152,11 @@
   document.getElementById("logout").addEventListener("click", function (e) {
     e.preventDefault();
 
-    localStorage.clear();
-    window.location.href = "index.html";
+    if (confirm("Are you sure you want to logout?")) {
+      localStorage.clear();
+      window.location.href = "index.html";
+    }
+
   });
 
   document.getElementById("noteSearch").addEventListener("keyup", function () {
