--- a/profile.html
+++ b/profile.html
@@ -104,8 +104,11 @@
   document.getElementById("logout").addEventListener("click", function (e) {
     e.preventDefault();
 
-    localStorage.clear();
-    window.location.href = "index.html";
+    if (confirm("Are you sure you want to logout?")) {
+      localStorage.clear();
+      window.location.href = "index.html";
+    }
+
   });
 
   document.getElementById("home").addEventListener("click", function (e) {
