--- a/note.html
+++ b/note.html
@@ -73,10 +73,16 @@
 
         const title = document.getElementById("title").value;
         const content = document.getElementById("content").value;
+        const submitBtn = this.querySelector("button[type='submit']");
         // const notes = JSON.parse(localStorage.getItem("noteToBeEdited"));
         // const noteId = localStorage.getItem("noteIdToBeEdited");
         // const noteUserId = notes.noteUserId;
         // localStorage.removeItem("noteToBeEdited")
+
+
+        // Disable button to prevent multiple clicks
+        submitBtn.disabled = true;
+        submitBtn.textContent = "Submitting...";
 
         const BASE_URL = " https://4f6518a6f47f.ngrok-free.app";
         fetch(`${BASE_URL}/note/update`, {
@@ -103,7 +109,11 @@
             alert(data.noteAPIResponseMessage);
             window.location.href = "notes.html";
         })
-        .catch(err => alert(err.message));
+        .catch(err => {
+            alert(err.message);
+            submitBtn.disabled = false;
+            submitBtn.textContent = "Edit Note";
+        });
     });
 
     document.getElementById("logout").addEventListener("click", function (e) {
