--- a/signin.html
+++ b/signin.html
@@ -29,6 +29,11 @@
 
     const email = document.getElementById("email").value;
     const password = document.getElementById("password").value;
+    const submitBtn = this.querySelector("button[type='submit']");
+
+    // Disable button to prevent multiple clicks
+    submitBtn.disabled = true;
+    submitBtn.textContent = "Signing In...";
 
     const BASE_URL = " https://4f6518a6f47f.ngrok-free.app";
     fetch(`${BASE_URL}/user/signin`, {
@@ -63,7 +68,11 @@
 
       window.location.href = "dashboard.html";
     })
-    .catch(err => alert(err.message));
+    .catch(err => {
+      alert(err.message);
+      submitBtn.disabled = false;
+      submitBtn.textContent = "Sign In";
+    });
   });
 
 
