--- a/profile.html
+++ b/profile.html
@@ -72,7 +72,12 @@
 
     const oldPassword = document.getElementById("oldPassword").value;
     const newPassword = document.getElementById("newPassword").value;
-    const userId = localStorage.getItem("userId");
+    const submitBtn = this.querySelector("button[type='submit']");
+    // const userId = localStorage.getItem("userId");
+
+    // Disable button to prevent multiple clicks
+    submitBtn.disabled = true;
+    submitBtn.textContent = "Submitting...";
 
     const BASE_URL = " https://4f6518a6f47f.ngrok-free.app";
     fetch(`${BASE_URL}/user/update-password`, {
@@ -97,8 +102,13 @@
       console.log("Full Response", data);
       alert(data.userAPIResponseMessage);
       window.location.href = "profile.html";
+
     })
-    .catch(err => alert(err.message));
+    .catch(err => {
+      alert(err.message);
+      submitBtn.disabled = false;
+      submitBtn.textContent = "Update Password";
+    });
     });
 
   document.getElementById("logout").addEventListener("click", function (e) {
