--- a/signin.html
+++ b/signin.html
@@ -35,7 +35,7 @@
     submitBtn.disabled = true;
     submitBtn.textContent = "Signing In...";
 
-    const BASE_URL = " https://7993cbcafa64.ngrok-free.app";
+    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules
     fetch(`${BASE_URL}/user/signin`, {
       method: "POST",
       headers: {"Content-Type": "application/json",
