--- a/new-note.html
+++ b/new-note.html
@@ -46,7 +46,7 @@
     submitBtn.disabled = true;
     submitBtn.textContent = "Submitting...";
 
-    const BASE_URL = " https://7993cbcafa64.ngrok-free.app";
+    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
     fetch(`${BASE_URL}/note/create`, {
       method: "POST",
       headers: {"Content-Type": "application/json",
