--- a/note.html
+++ b/note.html
@@ -45,7 +45,7 @@
         window.location.href = "notes.html";
     } else {
 
-        const BASE_URL = " https://7993cbcafa64.ngrok-free.app";
+        const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
         fetch(`${BASE_URL}/note/get-note-by-id/${noteId}`, {
             method: "GET",
             headers: {"Content-Type": "application/json",
@@ -84,7 +84,7 @@
         submitBtn.disabled = true;
         submitBtn.textContent = "Submitting...";
 
-        const BASE_URL = " https://7993cbcafa64.ngrok-free.app";
+        const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
         fetch(`${BASE_URL}/note/update`, {
             method: "PATCH",
             headers: {"Content-Type": "application/json",
