--- a/notes.html
+++ b/notes.html
@@ -46,7 +46,7 @@
     window.location.href = "signin.html";
   } else {
     container.innerHTML = "<p>Loading notes...</p>";
-    const BASE_URL = " https://7993cbcafa64.ngrok-free.app";
+    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
     fetch(`${BASE_URL}/note/get-notes`, {
       method: "GET",
       headers: {"Content-Type": "application/json",
@@ -123,7 +123,7 @@
 
   function deleteNote(noteId) {
 
-    const BASE_URL = " https://7993cbcafa64.ngrok-free.app";
+    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
     fetch(`${BASE_URL}/note/${noteId}`, {
       method: 'DELETE',
       headers: {"Content-Type": "application/json",
@@ -171,7 +171,7 @@
       return;
     }
 
-    const BASE_URL = " https://7993cbcafa64.ngrok-free.app";
+    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
     fetch(`${BASE_URL}/note/search?query=${encodeURIComponent(query)}`, {
       method: "GET",
       headers: {"Content-Type": "application/json",
