--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,7 @@
     window.location.href = "signin.html"; // Not signed in
   }
 
-  const BASE_URL = " https://7993cbcafa64.ngrok-free.app";
+  const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
   fetch(`${BASE_URL}/user/get-user`, {
     method: "GET",
     headers: {"Content-Type": "application/json",
@@ -79,7 +79,7 @@
     submitBtn.disabled = true;
     submitBtn.textContent = "Submitting...";
 
-    const BASE_URL = " https://7993cbcafa64.ngrok-free.app";
+    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
     fetch(`${BASE_URL}/user/update-password`, {
       method: "PATCH",
       headers: {"Content-Type": "application/json",
