--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,7 @@
     submitBtn.disabled = true;
     submitBtn.textContent = "Creating Account...";
 
-    const BASE_URL = " https://7993cbcafa64.ngrok-free.app";
+    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
     fetch(`${BASE_URL}/user/create`, {
       method: "POST",
       headers: {"Content-Type": "application/json",
